[package]
name = "early_adopter_airdrop"
version = "0.1.0"
authors = ["Brandon Torres"]
edition = "2021"

[dependencies]
anchor-lang = "0.30.0"  
anchor-spl = "0.30.0"   
solana-program = "1.16.0"  
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"
spl-token = "3.5.0"  
borsh = "0.10.3"  
borsh-derive = "0.10.3"
